--- a/SnowmassStyle/four-page-summary/wgreport.tex
+++ b/SnowmassStyle/four-page-summary/wgreport.tex
@@ -1,6 +1,6 @@
 %%%%%% four page summary  %%%%%%%%%%%%%%%%
  
-\chapter{Computing Frontier: Four page summary}
+\chapter{Computing Frontier Summary}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
