Some very minor changes after Lothar include the bulk of the comments.

--- a/SnowmassStyle/four-page-summary/four_page_summary.tex
+++ b/SnowmassStyle/four-page-summary/four_page_summary.tex
@@ -6,7 +6,7 @@ frontiers, the combined needs for cosmic frontier experiments, astrophysics
 and cosmology, and theory subgroups covered accelerator science,
 astrophysics and cosmology, lattice field theory, and perturbative QCD.
 Four infrastructure groups examined trends in computing to predict how
-technology will evolve and how it will effect future costs and
+technology will evolve and how it will affect future costs and
 capabilities. These groups focused on distributed computing and facility
 infrastructures; networking; software development, personnel, and training;
 data management and storage. These groups looked to identify critical
@@ -37,7 +37,8 @@ community has been a great source of computing innovation and expertise. It
 is essential to leverage those assets through wider sharing of knowledge
 throughout the experimental and theoretical communities. 
 We should be open to bi-directional sharing of expertise with the entire
-community of data-intensive science."
+%community of data-intensive science."
+scientific community.
 
 The experimental program relies for the most part on distributed
 high-throughput computing (HTC). Data analysis, simulation and
@@ -132,7 +133,7 @@ than storing them.
 {\it Intensity Frontier} experiments have combined computing requirements
 on the scale of a single energy frontier experiment but they are a more
 diverse set than the energy frontier. A survey was conducted and found that
-there is significant commonality in different experiments’ needs. Sharing of
+there is significant commonality in different experiments' needs. Sharing of
 resources across experiments, like in the Open Science Grid, is a first step
 in addressing peak compute resources needs.  Continued coordination of
 software development between these experiments will allow for efficiently
@@ -175,7 +176,7 @@ This program provides essential input for interpretation of a number of
 experiments, and increased precision will be required in the future. For
 example, the $b$ quark mass and the strong coupling $\alpha_s$ will need to
 be known at the 0.25\% level, a factor of two better than now, to compare
-upcoming LHC Higgs observations with Standard Model predictions. Advances
+upcoming ILC Higgs observations with Standard Model predictions. Advances
 in the calculation of hadronic contributions to muon $g-2$ will be needed
 for interpretation of the planned experimental measurement.
 
@@ -261,7 +262,7 @@ and networking. Continued evolution of the data management and storage
 systems will be needed in order to take advantage of new network
 capabilities, ensure efficiency and robustness of the global data
 federations, and to contain the level of effort needed for operations.
-Significant challenges with data management and access remain and research
+Significant challenges with data management and access remain, and research
 into these areas could continue to bring benefit across the Frontiers.  We
 expect solutions that will be based on content delivery approaches, dynamic
 data placement, and remote data access.
